<resources>
    <string name="app_name" translatable="false">MLS Trainer</string>
    <string name="activity_config_textview_title_packages">Verfügbare Aufgabenpakete</string>
    <string name="main_menu_button_config">Einstellungen</string>
    <string name="main_menu_button_learn">Lernen</string>
    <string name="main_menu_button_statistic">Statistik</string>
    <string name="activity_config_button_delete_source">Paketquelle löschen</string>
    <string name="activity_config_button_import_source">Paketquelle importieren</string>
    <string name="activity_config_textview_title_add_package_source">Aufgabenquelle hinzufügen</string>
    <string name="activity_config_tv_package_name">Beschriftung</string>
    <string name="activity_config_tv_package_url">Paket-URL</string>
    <string name="activity_config_button_add_source">Paketquelle hinzufügen</string>
    <string name="menu_keyword_exit_app">Beenden</string>
    <string name="menu_keyword_main_menu">Hauptmenü</string>
    <string name="activity_config_textview_title_learning">Weitere Einstellungen</string>
    <string name="activity_config_tv_repeat_threshold">Schwellwert für wiederholungsbedürftige Aufgaben</string>
    <string name="activity_config_button_set_repeating_threshold">Schwellwert speichern</string>
    <string name="activity_config_error_save_shared_preferences">Fehler beim Abspeichern (Shared Preferences)</string>
    <string name="activity_config_textview_title_reset">Zurücksetzen</string>
    <string name="activity_config_button_delete_all_assessments">Entfernung aller Aufgaben</string>
    <string name="activity_config_button_reset_statistics">Statistik zurücksetzen</string>
    <string name="activity_config_button_reset_app">App zurücksetzen (Werkszustand)</string>
    <string name="activity_config_error_cannot_create_url_hashmap_file">Fehler. Erstellen der Paketquellen-Datei nicht möglich</string>
    <string name="activity_config_popup_regarding_package">Betreffendes Paket</string>
    <string name="activity_config_error_delete_hashmap_entry">Fehler. Eintrag konnte nicht gelöscht werden.</string>
    <string name="activity_config_import_message_package_downloaded">Aufgabenpaket heruntergeladen</string>
    <string name="activity_config_import_message_package_start_download">Lade Aufgabenpaket herunter</string>
    <string name="activity_config_import_message_verify_downloaded_file_ok">Verifizierung des Aufgabenpaketes</string>
    <string name="activity_config_import_message_package_size">Paketgröße</string>
    <string name="activity_config_import_message_extract_package">Entpacke Aufgabenpaket</string>
    <string name="activity_config_import_message_package_extracted">Aufgabenpaket entpackt</string>
    <string name="activity_config_import_message_verify_extracted_files">Verifizierung entpackter Dateien</string>
    <string name="activity_config_import_message_error_downloading_package">Fehler beim Herunterladen des Aufgabenpaketes</string>
    <string name="activity_config_popup_title">Aufgabenpaket</string>
    <string name="activity_config_import_message_import_assessments_successfull">Aufgaben: Importiert</string>
    <string name="activity_config_import_message_import_assessments_not_successfull">Aufgabengruppen: Fehler beim Import. Keine Aufgabengruppen importiert.</string>
    <string name="activity_config_import_message_import_related_successfull">Aufgabengruppen: Importiert.</string>
    <string name="activity_config_import_message_import_related_not_successfull">Aufgabengruppen: Fehler beim Import. Keine Aufgabengruppen importiert.</string>
    <string name="activity_config_import_message_import_supports_successfull">Hilfestellungen: Importiert.</string>
    <string name="activity_config_import_message_import_supports_not_successfull">Hilfestellungen: Fehler beim Import. Keine Hilfestellungen importiert.</string>
    <string name="activity_label_learn_assessments">Aufgaben lernen</string>
    <string name="activity_label_config">Einstellungen</string>
    <string name="activity_label_selection">Aufgabenauswahl</string>
    <string name="activity_label_statistic">Statistik</string>
    <string name="activity_config_reset_message_remove_all_assessments">Alle Aufgaben wurden gelöscht</string>
    <string name="activity_config_reset_message_reset_statistic">Die Statistik wurde zurückgesetzt</string>
    <string name="activity_config_reset_message_reset_application">Die Anwendung wurde zurückgesetzt</string>
    <string name="activity_learn_button_prev_assessment">Vorherige Aufgabe</string>
    <string name="activity_learn_button_next_assessment">Nächste Aufgabe</string>
    <string name="activity_learn_label_assessment_count">Aufgabenanzahl</string>
    <string name="activity_learn_label_assessments_to_process">Noch zu bearbeitendende Aufgaben</string>
    <string name="activity_selection_label_available_tags">Auswählbare Themengebiete</string>
    <string name="activity_selection_label_selected_tags">Ausgewählte Themengebiete</string>
    <string name="activity_selection_label_selected_assessments">Ausgewählte Aufgaben</string>
    <string name="activity_selection_button_learn">Lernen</string>
    <string name="menu_keyword_selection">Aufgabenauswahl</string>
    <string name="activity_learn_button_check_user_response">Lösung überprüfen</string>
    <string name="activity_learn_title_support">Hilfestellung</string>
    <string name="activity_learn_support_button_start_video">Starte Video</string>
    <string name="activity_learn_support_button_video_fullscreen">Video in Vollbild</string>
    <string name="activity_fullscreen_video_label">Vollbild-Video</string>
    <string name="activity_learn_label_check_drag_assessment_solution">Bitte erst alle Elemente einsortieren</string>
    <string name="activity_config_import_message_file_not_found">Fehler: Datei nicht gefunden</string>
    <string name="activity_selection_button_last_imported">Zuletzt importiert</string>
    <string name="activity_selection_button_for_repeating">Zur Wiederholung</string>
    <string name="activity_selection_button_solved_corred">Richtig Gelöste</string>
    <string name="activity_selection_button_all_assessments">Alle Aufgaben</string>
    <string name="activity_selection_popup_label_title">Zusammenhängende Aufgaben</string>
    <string name="activity_selection_popup_label_question">Sollen zusammenhängende Aufgaben mit bearbeitet werden?</string>
    <string name="activity_selection_popup_button_yes">Ja</string>
    <string name="activity_selection_popup_button_no">Nein</string>
    <string name="activity_selection_textview_assessment_type_table">Tabelle</string>
    <string name="activity_selection_button_not_solved_corred">Falsch Gelöste</string>
    <string name="label_on">An</string>
    <string name="label_off">Aus</string>
    <string name="activity_selection_toggle_related_button">Zusammenhängende Aufgaben</string>
    <string name="activity_selection_label_available_categories">Verfügbare Kategorien</string>
    <string name="activity_statistic_title_label_statistic">Statistik</string>
    <string name="activity_statistic_title_label_tag_selection">Verfügbare Tags</string>
    <string name="activity_statistic_title_label_period_selection">Zeitraum</string>
    <string name="activity_statistic_chart_message_no_data">Keine Daten zur Anzeige. Bitte Kategorie oder Tag auswählen.</string>
    <string name="activity_statistic_btn_select_start_period">Zeitraum-Beginn</string>
    <string name="activity_statistic_btn_select_end_period">Zeitraum-Ende</string>
    <string name="activity_statistik_title_label_available_tags">Verfügbare Tags</string>
    <string name="activity_statistic_button_period_selection">Zeitraum</string>
    <string name="activity_learn_response_label_correct">Aufgabe richtig bearbeitet</string>
    <string name="activity_learn_response_label_partly_correct">Aufgabe teilweise richtig bearbeitet</string>
    <string name="activity_learn_response_label_wrong">Aufgabe falsch bearbeitet</string>
    <string name="activity_learn_multiple_choice_no_checkboxes_clicked">Keine Antwortmöglichkeiten ausgewählt</string>
    <string name="activity_label_drag_assessment_message_drag_all_buttons">Bitte erst alle Elemente verschieben</string>
    <string name="activity_learn_message_all_assessments_solved">Alle Aufgaben bearbeitet. Zusammenfassung anzeigen</string>
    <string name="activity_learn_summary_title">Zusammenfassung der Aufgaben</string>
    <string name="keyword_solved_correctly">Richtig</string>
    <string name="keyword_solved_partly_correct">Teilweise richtig</string>
    <string name="keyword_solved_falsely">Falsch</string>
    <string name="keyword_table_assessment_type">Tabellen</string>
    <string name="activity_statistic_button_hide_layout">Einklappen</string>
    <string name="activity_statistic_button_show_layout">Ausklappen</string>
    <string name="activity_config_button_add_source_by_qr">Paketquelle per QR-Code</string>
    <string name="activity_config_more_config_auto_switch">Nach App-Start sofort in die Aufgabenauswahl wechseln</string>
    <string name="activity_config_message_replaces_blanks">Leerzeichen in der Bezeichnung wurden durch ein _ ersetzt!</string>
    <string name="activity_config_message_regex_mismatch">Falsches Eingabeformat. Bitte für die Bezeichnung keine Sonderzeichen verwenden. Die Url muss eine gültige HTTP-Adresse enthalten.</string>
    <string name="activity_config_message_package_source_added_by_qr">Aufgabenquelle hinzugefügt</string>
    <string name="activity_learn_mc_label_answer">Antwort</string>
    <string name="activity_learn_mc_required_points">Erforderliche Punktzahl nicht erreicht</string>
    <string name="keyword_assessment">Aufgabe</string>
    <string name="assessment_type_description_choice">Eine Antwort ist auswählbar. Eine ist korrekt</string>
    <string name="assessment_type_description_choiceMultiple">Mehrere Antworten auswählbar. Mehrere sind (vielleicht) korrekt</string>
    <string name="assessment_type_description_hotspot">Identifizierung von Objekten</string>
    <string name="assessment_type_description_table">Ausfüllen von Tabellen</string>
    <string name="assessment_type_description_drag">Einsortierung von Begriffen</string>
    <string name="activity_config_import_message_verify_extracted_files_error">Fehler in der Stuktur</string>
</resources>
