<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitlePackages"
                android:text="@string/activity_config_textview_title_packages"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <ListView
                android:id="@+id/listViewPackageUrls"
                android:layout_width="match_parent"
                android:layout_height="140dp">
            </ListView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleAddPackage"
                android:text="@string/activity_config_textview_title_add_package_source"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvAddPackageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_config_tv_package_name"
                    android:layout_column="1"
                    android:layout_row="1" />
                <EditText
                    android:id="@+id/etSourcename"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:layout_column="2"
                    android:layout_row="1" />
                <TextView
                    android:id="@+id/tvAddPackageUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_config_tv_package_url"
                    android:layout_column="1"
                    android:layout_row="2" />
                <EditText
                    android:id="@+id/etSourceUrl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:layout_column="2"
                    android:layout_row="2" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_column="1"
                    android:layout_columnSpan="2"
                    android:layout_row="3">

                    <Button
                        android:id="@+id/btnAddPackageSource"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_config_button_add_source"
                        android:onClick="btnAddPackageSource"/>

                    <Button
                        android:id="@+id/btnAddPackageSourceByQrCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:layout_row="3"
                        android:text="@string/activity_config_button_add_source_by_qr"
                        android:onClick="btnAddPackageSourceByQrCode"/>

                    <ImageView
                        android:layout_marginTop="5dp"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/qrcode" />
                </LinearLayout>
            </GridLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleLearning"
                android:text="@string/activity_config_textview_title_learning"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSetRepeatThreshold"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/activity_config_tv_repeat_threshold"
                    android:gravity="center_vertical"
                    android:layout_column="1"
                    android:layout_row="1" />

                <SeekBar
                    android:id="@+id/sbRepeatingThreshold"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_column="2"
                    android:layout_row="1"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:max="10"
                    android:progress="3" />

                <TextView
                    android:id="@+id/tvRepeatingThresholdValue"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:layout_column="3"
                    android:layout_row="1"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Auswerten" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/activity_config_more_config_auto_switch"
                    android:gravity="center_vertical"
                    android:layout_column="1"
                    android:layout_row="1" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchAppStart" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleReset"
                android:text="@string/activity_config_textview_title_reset"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20dp"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDeleteAllAssessments"
                    android:text="@string/activity_config_button_delete_all_assessments"
                    android:onClick="btnRemoveAllAssessments"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnResetStatistics"
                    android:text="@string/activity_config_button_reset_statistics"
                    android:onClick="btnResetStatistics"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/btnResetApp"
                    android:text="@string/activity_config_button_reset_app"
                    android:onClick="btnAppReset"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>