<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutCategories">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_selection_label_available_categories"
            android:background="@drawable/activity_selection_textview_title"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/activity_selection_textview_title"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_statistic_title_label_period_selection"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_statistic_button_hide_layout"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:onClick="btnTimePeriodClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayoutDateToggle">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/activity_selection_textview_title"
            android:paddingTop="0dp"
            android:paddingBottom="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_statistik_title_label_available_tags"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_statistic_button_hide_layout"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:onClick="btnAvailableTagsClick"/>
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap"
            app:alignItems="stretch"
            app:alignContent="stretch"
            android:id="@+id/flexboxAvailableTags"></com.google.android.flexbox.FlexboxLayout>

        <LinearLayout
            android:id="@+id/linearLayoutChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_statistic_title_label_statistic"
            android:background="@drawable/activity_selection_textview_title"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>