<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainScrollLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linmain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLearn"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/main_menu_button_learn"
                android:onClick="btnSelectionOnClick"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>

            <Button
                android:id="@+id/btnStatistic"
                android:layout_width="160dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/main_menu_button_statistic"
                android:onClick="btnStatisticOnClick"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnConfiguration"
                android:layout_width="160dp"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:onClick="btnConfigOnClick"
                android:text="@string/main_menu_button_config"
                android:background="@drawable/activity_selection_textview_title"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>