<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.liehr.mls_app.ActivitySelection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollViewSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayoutCategories">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_selection_label_available_categories"
                    android:background="@drawable/activity_selection_textview_title"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_selection_label_available_tags"
                    android:background="@drawable/activity_selection_textview_title"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>

                <com.google.android.flexbox.FlexboxLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexWrap="wrap"
                    app:alignItems="stretch"
                    app:alignContent="stretch"
                    android:id="@+id/fbAvailableTags">

                </com.google.android.flexbox.FlexboxLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_selection_label_selected_tags"
                    android:background="@drawable/activity_selection_textview_title"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>


                <com.google.android.flexbox.FlexboxLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:flexWrap="wrap"
                    app:alignItems="stretch"
                    app:alignContent="stretch"
                    android:id="@+id/fbSelectedTags">

                </com.google.android.flexbox.FlexboxLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_selection_label_selected_assessments"
                    android:background="@drawable/activity_selection_textview_title"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/linearLayoutCalculatedAssessments">
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutRelatedButton"
                android:orientation="horizontal"
                android:minWidth="1dp"
                android:minHeight="1dp"></LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_selection_button_learn"
                android:onClick="btnLearnOnClick"/>
        </LinearLayout>


    </LinearLayout>



</ScrollView>